<resources>
    <string name="app_name">SnookerTracker-1856482</string>
    <string name="app_name_short">Snooker Tracker</string>
    <string name="welcome">Welcome!</string>
    <string name="start_match">Start Match</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_theme">App theme:</string>
    <string name="change_theme">Change Theme</string>
    <string name="theme_changed">Theme was successfuly changed!</string>
    <string name="solo">Solo</string>
    <string name="teams">Teams</string>
    <string name="player_one">Player One</string>
    <string name="players_name">Player\'s Name</string>
    <string name="player_two">Player Two</string>
    <string name="first_team">First Team</string>
    <string name="second_team">Second Team</string>
    <string name="empty_field_error">Field must not be empty</string>
    <string name="photo_error">Error while preparing camera</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="dummy_score">56</string>
    <string name="total_points">Total Points:</string>
    <string name="team_one">Team One</string>
    <string name="team_two">Team Two</string>
    <string name="now_striking">Now Striking</string>
    <string name="foul">FOUL!</string>
    <string name="end_frame">End Frame</string>
    <string name="points">points</string>
    <string name="rank_dummy">1</string>
    <string name="player_rankings">Player Rankings</string>
    <string name="play_again">Play Again</string>
    <string name="end_game">End Game</string>
    <string name="camera_error">Error encountered while getting camera ready</string>
    <string name="match_type">Match Type</string>
    <string name="solo_1_vs_1">Solo: 1 vs 1</string>
    <string name="duo_2_vs_2">Duo: 2 vs 2</string>
    <string name="play_against_another_player">Play against another player</string>
    <string name="team_up_in_a_two_versus_two_game">Team up in a two versus two game</string>
    <string name="confirm_button_label">Press the button again to confirm</string>
    <string name="player_setup">Player Setup</string>
    <string name="exit_dialog_title">End Match</string>
    <string name="exit_dialog_message">Returning to menu screen results in current match progress being lost. Continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="themes">
        <item>Grassland</item>
        <item>Sky-High</item>
    </string-array>
</resources>
