<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/game_avatar_image_view"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/game_player_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dummy_name"
        android:textSize="@dimen/textSubheadingSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/game_avatar_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_player_score_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_score"
        android:textSize="@dimen/textSmallSubheadingSize"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/game_avatar_image_view"
        app:layout_constraintTop_toBottomOf="@+id/game_player_name_text_view" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/points"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/game_player_score_text_view"
        app:layout_constraintStart_toEndOf="@+id/game_player_score_text_view" />
</android.support.constraint.ConstraintLayout>