<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/screenMarginRight"
    tools:context="com.example.serba.snookertracker_1856482.dialogs.SettingsDialog"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="@dimen/buttonPadding"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textSize="@dimen/textSizeTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Spinner
        android:id="@+id/theme_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/themes"
        android:padding="@dimen/contentSpace"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <Button
        android:id="@+id/change_theme_button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/change_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_spinner"
        app:layout_goneMarginTop="@dimen/screenMarginRight" />

</android.support.constraint.ConstraintLayout>
