<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.serba.snookertracker_1856482.activities.MenuActivity">

    <include
        android:id="@+id/include"
        layout="@layout/app_logo_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/start_match_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/start_match_button"
        android:layout_width="@dimen/menuButtonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/screenMarginLeft"
        android:text="@string/start_match"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="@dimen/menuButtonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentSpace"
        android:text="@string/settings"
        app:layout_constraintBottom_toTopOf="@+id/exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_match_button" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="@dimen/menuButtonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/contentSpace"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button" />
</android.support.constraint.ConstraintLayout>
